[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safemigrate"
version = "1.0.0"
description = "Safety-critical database migration environment for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
baseline = ["openai>=1.0.0"]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["safemigrate*", "server*", "models*", "tasks*"]